Início da implemtentação do comportamento responsivo do rodapé

--- a/index.html
+++ b/index.html
@@ -298,16 +298,16 @@
 
 	</section>
 
-	<!-- <footer>
-		<nav>
-			<ul>
-				<li>Copyright 2016 - CälculuS - Todos Direitos Reservados</li>
-				<li> <a href="termosdeuso.html">Termos de Uso </a></li>
-				<li> <a href="politica.html">Política de Privacidade </a></li>
-				<li><a href="otrapagina.html">Membros</li>
+	<footer>
+		<nav class="opcoes-menu">
+			<ul class="rodape">
+				<li class="itemdomenu">Copyright 2016 - CälculuS - Todos Direitos Reservados</li>
+				<li class="itemdomenu"> <a href="termosdeuso.html">Termos de Uso </a></li>
+				<li class="itemdomenu"> <a href="politica.html">Política de Privacidade </a></li>
+				<li class="itemdomenu"> <a href="otrapagina.html">Membros</li>
 			</ul>
 		</nav>
-	</footer> -->
+	</footer>
 
 </body>
 </html>
