Correção das fontes desformatadas. Mudança da fonte Bebas para Yannone.

--- a/index.html
+++ b/index.html
@@ -216,24 +216,24 @@
 					<span class="frasesatisfacao"><strong>100% de Satisfação.</strong></span>
 				</h2>
 				
-				<p>
+				<p class="descricaogarantia">
 					Eu sei que você está passando por uma fase muito importante em sua vida, um curso universitário...
 				</p>
 
-				<p>
+				<p class="descricaogarantia">
 					Então quero que você tenha total e completa confiança ao adquirir o curso CälculuS!
 				</p>
 
-				<p>
+				<p class="descricaogarantia">
 					Assista as aulas, pratique os exercícios e estude o conteúdo por pelo menos 1 hora por dia. Tudo isso por até 30 dias completos!
 				</p>
 
-				<p>
+				<p class="descricaogarantia">
 					Durante este período, se você não notar CLARAMENTE uma melhora em seus conhecimentos de derivadas e/ou integrais... Ou até mesmo se você não gostar do som da minha voz... 	
 				</p>
 
-				<p>
-					Basta você mandar um e-mail para faleconosco.calculus@gmail.com pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
+				<p class="descricaogarantia">
+					Basta você mandar um e-mail para <span class="email">faleconosco.calculus@gmail.com</span> pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
 				</p>
 			</article>
 
