Colocação das imagens de depoimentos baseados em reportagens, junto com a versão inícial do comportamento responsivo e apresentação na tela

--- a/index.html
+++ b/index.html
@@ -65,28 +65,53 @@
 
 	</main>
 
-	<!-- <section>
+	<section class="depoimentos-bocaboca">
 		<h2>
 			Veja o que o mercado diz sobre os cursos de ciências exatas
 		</h2>
 		<article>
-			<img src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/jornaldaglobo-exatas.png">
+			<!-- <img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/jornaldaglobo-exatas.png"> -->
 
-			<img src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-01.png">
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-01.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-04.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-03.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-02.png">
+
 		</article>
 
-		<article>
+		<article class="depoimentos-bocaboca">
 			<h2>
 				O que o alunos e os professores falam sobre a disciplina de Cálculo?
 			</h2>
+			
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-01.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-02.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-03.png">
+
 		</article>
 
-		<article>
+		<article class="depoimentos-bocaboca">
 			<h2>
 				Como as pessoas que estudaram Cálculo estão profissionalmente?
 			</h2>
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/formacao-bilionarios-01.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/formacao-bilionarios-02.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/engenheiros-milionarios.png">
+
+			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/engenheiros-milionarios-01.png">
+
 		</article>
-	</section> -->
+	</section>
 
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
