Colocação de margem no título de depoimentos e mudança para a cor azul

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
 	</main>
 
 	<section class="depoimentos-bocaboca">
-		<h2>
+		<h2 class="titulo -comenfase">
 			Veja o que o mercado diz sobre os cursos de ciências exatas
 		</h2>
 		<article>
-			<!-- <img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/jornaldaglobo-exatas.png"> -->
 
 			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-01.png">
 
@@ -83,7 +82,7 @@
 		</article>
 
 		<article class="depoimentos-bocaboca">
-			<h2>
+			<h2 class="titulo -comenfase">
 				O que o alunos e os professores falam sobre a disciplina de Cálculo?
 			</h2>
 			
@@ -98,7 +97,7 @@
 		</article>
 
 		<article class="depoimentos-bocaboca">
-			<h2>
+			<h2 class="titulo -comenfase">
 				Como as pessoas que estudaram Cálculo estão profissionalmente?
 			</h2>
 
