Correção de erro bobo - esqueci de colocar as imagens na pasta correta do projeto e não apontar os links no src com link absoluto para caminho na minha máquina

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 		</h2>
 		<article>
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-01.png">
+			<img class="reportagens" src="./imagens/1demanda-reprimida/oglobo-engenheiros-01.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-04.png">
+			<img class="reportagens" src="./imagens/1demanda-reprimida/oglobo-engenheiros-04.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-03.png">
+			<img class="reportagens" src="./imagens/1demanda-reprimida/oglobo-engenheiros-03.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-02.png">
+			<img class="reportagens" src="./imagens/1demanda-reprimida/oglobo-engenheiros-02.png">
 
 		</article>
 
@@ -86,13 +86,13 @@
 				O que o alunos e os professores falam sobre a disciplina de Cálculo?
 			</h2>
 			
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror.png">
+			<img class="reportagens" src="./imagens/2publico-alvo/globo-terror.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-01.png">
+			<img class="reportagens" src="./imagens/2publico-alvo/globo-terror-01.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-02.png">
+			<img class="reportagens" src="./imagens/2publico-alvo/globo-terror-02.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/2publico-alvo/globo-terror-03.png">
+			<img class="reportagens" src="./imagens/2publico-alvo/globo-terror-03.png">
 
 		</article>
 
@@ -101,13 +101,13 @@
 				Como as pessoas que estudaram Cálculo estão profissionalmente?
 			</h2>
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/formacao-bilionarios-01.png">
+			<img class="reportagens" src="./imagens/3pessoas-sucesso/formacao-bilionarios-01.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/formacao-bilionarios-02.png">
+			<img class="reportagens" src="./imagens/3pessoas-sucesso/formacao-bilionarios-02.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/engenheiros-milionarios.png">
+			<img class="reportagens" src="./imagens/3pessoas-sucesso/engenheiros-milionarios.png">
 
-			<img class="reportagens" src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/3pessoas-sucesso/engenheiros-milionarios-01.png">
+			<img class="reportagens" src="./imagens/3pessoas-sucesso/engenheiros-milionarios-01.png">
 
 		</article>
 	</section>
