--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Cälculus</title>
+	<title>CälculuS</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -283,7 +283,7 @@
 	</section> 
 
 	<section class="bonus-total">
-		<h2 class="chamadabonus">Mais de X Reais em Bônus (Tudo Grátis!)</h2>
+		<h2 class="chamadabonus">Mais de R$ 197,00 Reais em Bônus (Tudo Grátis!)</h2>
 		<article class="bonus-parcial">
 			<div class="titulo-bonus">
 				<img src="./imagens/integral.png" class="imagembonus">
@@ -301,21 +301,22 @@
 				<h3 class="titulobonus">Aplicações de Integrais</h3>
 			</div>
 			<p class="descricaobonus">
-				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
+				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível conhecimento a seu favor.
 			</p>
 		</article>
 
 		<article class="bonus-parcial">
 			<div class="titulo-bonus">
 				<img src="./imagens/infinite2.png" class="imagembonus">
-				<h3 class="titulobonus">6 meses de acesso grátis</h3>
+				<h3 class="titulobonus">Acesso ILIMITADO!</h3>
 			</div>
 			<p class="descricaobonus">
-				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
+				Normalmente a compra do curso CälculuS permite a você um acesso de 6 meses, o tempo que dura sua disciplina universitária. Mas hoje quero te oferecer um incrível bônus! Você terá acesso ILIMITADO à área privada
+				do curso enquanto durar essa oferta. Todo este tempo te proporciona muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
 			</p>
 		</article>
 		<p class="chamadabonus final">
-			Aproveite este incrível bônus! (é por <strong>tempo limitado</strong>)
+			Aproveite estes incríveis bônus! (é por <strong>tempo limitado</strong>)
 		</p>
 
 	</section>
