--- a/index.html
+++ b/index.html
@@ -108,7 +108,31 @@
 			<img class="reportagens" src="./imagens/3pessoas-sucesso/engenheiros-milionarios-01.png">
 
 		</article>
+
+		<a href="otrapagina.html" class="botaocomprar">
+			<p class="chamadadobotao">
+				<span class="empolgado">SIM!&nbsp;</span>Eu quero maiores notas em Cálculo!
+			</p>
+			
+			<img class="formasdepagar" 
+				sizes="(max-width: 400px) 100vw, 400px"
+				srcset="
+				./imagens/bandeirasA-50.png 50w,
+				./imagens/bandeiras1-100.png 100w,
+				./imagens/bandeirasB-137.png 137w,
+				./imagens/bandeirasC-200.png 200w,
+				./imagens/bandeiras2-217.png 217w,
+				./imagens/bandeiras3-261.png 261w,
+				./imagens/bandeiras4-307.png 307w,
+				./imagens/bandeiras5-365.png 365w,
+				./imagens/bandeiras6-400.png 400w"
+				src="./imagens/bandeiras6-400.png"
+				alt=""
+			>
+		</a>
 	</section>
+
+
 
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
