Colocação de enfase no preço descrito no bônus

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 	
 
 	<section class="bonus-total">
-		<h2 class="chamadabonus">Mais de R$ 197,00 Reais em Bônus (Tudo Grátis!)</h2>
+		<h2 class="chamadabonus">Mais de <span class="preco">R$ 197,00</span> Reais em Bônus (Tudo Grátis!)</h2>
 		<article class="bonus-parcial">
 			<div class="titulo-bonus">
 				<img src="./imagens/integral.png" class="imagembonus">
@@ -282,7 +282,7 @@
 			</p>
 		</article>
 		<p class="chamadabonus final">
-			Aproveite estes incríveis bônus! (é por <strong>tempo limitado</strong>)
+			Aproveite estes incríveis bônus! É por <strong>tempo limitado</strong>.
 		</p>
 
 	</section>
