--- a/index.html
+++ b/index.html
@@ -325,6 +325,22 @@
 	</section>
 
 	<section class="botao-avulso">
+
+		<article class="preco-promocional">
+			<p>
+				Preço Normal: R$ 697,00
+			</p>
+
+			<p class="chamadatemporaria">
+				Promoção Temporária
+			</p>
+
+			<p class="preco">
+				R$ 97,00
+			</p>
+		</article>
+		
+
 		<a href="otrapagina.html" class="botaocomprar">
 			<p class="chamadadobotao">
 				<span class="empolgado">SIM!&nbsp;</span>Eu quero maiores notas em Cálculo!
@@ -360,5 +376,14 @@
 		</nav>
 	</footer>
 
+ 	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-56084284-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
 </html>
