Estilização da chamada para o preço promocional

--- a/index.html
+++ b/index.html
@@ -327,15 +327,15 @@
 	<section class="botao-avulso">
 
 		<article class="preco-promocional">
-			<p>
+			<p class="preconormal">
 				Preço Normal: R$ 697,00
 			</p>
 
 			<p class="chamadatemporaria">
-				Promoção Temporária
+				Promoção Temporária:
 			</p>
 
-			<p class="preco">
+			<p class="precofinal">
 				R$ 97,00
 			</p>
 		</article>
