Brincando com possibilidades de colorização

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 			</p>
 
 			<p class="precofinal">
-				&#9733; R$ 97,00 &#9733;
+				<span class="teste">&#9733;</span> R$ 97,00 <span class="teste">&#9733;</span> 
 			</p>
 		</article>
 		
