Inclusão do link do HOTMART no botão de compras

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		
 		
-		<a href="otrapagina.html" class="botaocomprar">
+		<a href="https://www.hotmart.net.br/checkout.html?order=W4066435E&checkoutMode=6" target="_blank" class="botaocomprar">
 			<p class="chamadadobotao">
 				<span class="empolgado">SIM!&nbsp;</span>Eu quero maiores notas em Cálculo!
 			</p>
@@ -109,7 +109,7 @@
 
 		</article>
 
-		<a href="otrapagina.html" class="botaocomprar">
+		<a href="https://www.hotmart.net.br/checkout.html?order=W4066435E&checkoutMode=6" target="_blank" class="botaocomprar">
 			<p class="chamadadobotao">
 				<span class="empolgado">SIM!&nbsp;</span>Eu quero maiores notas em Cálculo!
 			</p>
@@ -341,7 +341,7 @@
 		</article>
 		
 
-		<a href="otrapagina.html" class="botaocomprar">
+		<a href="https://www.hotmart.net.br/checkout.html?order=W4066435E&checkoutMode=6" target="_blank" class="botaocomprar">
 			<p class="chamadadobotao">
 				<span class="empolgado">SIM!&nbsp;</span>Eu quero maiores notas em Cálculo!
 			</p>
