Ajustes na escrita e ortografia das paginas

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<h3 class="titulo">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
 			</div>
 			<p class="descricaoaula">
-				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
+				Este poderoso conhecimento vai te tornar um profundo conhecedor de derivadas integrais.
 			</p>
 		</article class="conteudo-aula">
 
