--- a/politica.html
+++ b/politica.html
@@ -17,7 +17,7 @@
 	<h2>Importante: Política de Descadastramento (“Opt-out”)</h2>
 	
 	<p>
-		O usuário dos nossos serviços pode a qualquer momento deixar de receber comunicações do nosso site. Para tanto basta enviar um email para faleconosco.calculus@gmail.com indicando o seu desejo de não mais receber comunicações, ou simplesmente clicar no link ‘remover’ ou ‘desuscribirse contido no final de cada email. Como coletamos informações a seu respeito Quando você visita o site do curso CalculuS Ltda. ou usa os Serviços do curso CalculuS Ltda., coletamos o seu endereço IP e as informações 
+		O usuário dos nossos serviços pode a qualquer momento deixar de receber comunicações do nosso site. Para tanto basta enviar um email para faleconosco.calculus@gmail.com indicando o seu desejo de não mais receber comunicações, ou simplesmente clicar no link ‘remover’ ou ‘desuscribirse contido no final de cada email. Como coletamos informações a seu respeito quando você visita o site do curso CalculuS Ltda. ou usa os Serviços do curso CalculuS Ltda., coletamos o seu endereço IP e as informações 
 		padrão de acesso à web como o tipo do seu navegador e as páginas que acessou em nosso site. Se você se inscrever, coletaremos os seguintes tipos de informações:
 	</p>
 	
@@ -52,10 +52,13 @@
 	</p>
 	
 	<p>
-		Armazenamos e processamos suas informações pessoais em nossos computadores nos e as protegemos sob medidas de proteção físicas, eletrônicas e processuais. Usamos proteções de computador, como firewalls e criptografia de dados, aplicamos controles de acesso físico a nossos prédios e arquivos e autorizamos o acesso a informações pessoais apenas para os funcionários que precisem delas para cumprir suas responsabilidades profissionais. Como usamos as informações pessoais que coletamos Nossa finalidade principal ao coletar informações pessoais é fornecer a você uma experiência segura, tranquila, eficiente e personalizada. Para isso, usamos suas informações pessoais para:
+		Armazenamos e processamos suas informações pessoais em nossos computadores e as protegemos sob medidas de proteção físicas, eletrônicas e processuais. Usamos proteções de computador, como firewalls e criptografia de dados, aplicamos controles de acesso físico a nossos prédios e arquivos e autorizamos o acesso a informações pessoais apenas para os funcionários que precisem delas para cumprir suas responsabilidades profissionais. 
 	</p>
 	
+	<h2>Como usamos as informações pessoais que coletamos</h2>
+	
 	<p>
+		Nossa finalidade principal ao coletar informações pessoais é fornecer a você uma experiência segura, tranquila, eficiente e personalizada. Para isso, usamos suas informações pessoais para:
 		fornecer os serviços e o suporte ao cliente solicitados;
 		processar transações e enviar avisos sobre as suas transações;
 		solucionar disputas, cobrar taxas e solucionar problemas;
@@ -68,11 +71,8 @@
 	<h2>Marketing</h2>
 	
 	<p>
-		Não vendemos nem alugamos suas informações pessoais para terceiros para fins de marketing sem seu consentimento explícito. Podemos combinar suas informações com as informações que coletamos de outras empresas e usá-las para melhorar e personalizar nossos serviços, conteúdo e publicidade. Se não desejar receber nossas mensagens de marketing nem participar de nossos programas de personalização de anúncios, basta indicar sua preferência mandando-nos um e-mail ou simplesmente clicar no link de descadastramento fornecido em todos os nossos emails. Como compartilhamos informações pessoais com outras partes Podemos compartilhar suas informações pessoais com:
-	</p>
-	
-	<p>
-		Membros da família corporativa do curso CalculuS Ltda. para fornecer conteúdo, produtos e serviços conjunto (como registro, transações e suporte ao cliente) para ajudar a detectar e impedir atos potencialmente ilegais e violações de nossas políticas, além de cooperar nas decisões quanto a seus produtos, serviços e comunicações. Os membros da nossa família corporativa usarão essas informações para lhe enviar comunicações de marketing apenas se você tiver solicitado seus serviços.
+		Não vendemos nem alugamos suas informações pessoais para terceiros para fins de marketing sem seu consentimento explícito. Podemos combinar suas informações com as informações que coletamos de outras empresas e usá-las para melhorar e personalizar nossos serviços, conteúdo e publicidade. Se não desejar receber nossas mensagens de marketing nem participar de nossos programas de personalização de anúncios, basta indicar sua preferência mandando-nos um e-mail ou simplesmente clicar no link de descadastramento fornecido em todos os nossos emails. Como compartilhamos informações pessoais com outras partes podemos compartilhar suas informações pessoais com:
+		membros da família corporativa do curso CalculuS Ltda. para fornecer conteúdo, produtos e serviços conjunto (como registro, transações e suporte ao cliente) para ajudar a detectar e impedir atos potencialmente ilegais e violações de nossas políticas, além de cooperar nas decisões quanto a seus produtos, serviços e comunicações. Os membros da nossa família corporativa usarão essas informações para lhe enviar comunicações de marketing apenas se você tiver solicitado seus serviços.
 	</p>
 	
 	<p>
@@ -88,7 +88,7 @@
 	</p>
 	
 	<p>
-		Note que esses terceiros podem estar em outros países nos quais a legislação sobre o processamento de informações pessoais seja menos rígida do que a do seu país. Nos casos em que nossa empresa e um parceiro promovem juntos nossos Serviços, nós podemos divulgar ao parceiro algumas informações pessoais tais como nome, endereço e nome de usuário das pessoas que se inscreveram nos nossos Serviços com resultado da promoção conjunta com o único propósito de permitir a nós e ao parceiro avaliar os resultados da promoção. Nesse caso, informações pessoais não podem ser usadas pelo parceiro para nenhum outro propósito o curso CalculuS Ltda. não venderá ou alugará nenhuma das suas informações pessoais para terceiros no curso normal dos negócios e só compartilha suas informações pessoais com terceiros,conforme descrito nesta política. Se você se inscrever no curso CalculuS Ltda. diretamente em um site de terceiros ou por meio de um aplicativo de terceiros, qualquer informação inserida naquele site ou aplicativo (e não diretamente em um site do curso CalculuS Ltda.) será compartilhada com o proprietário desse site ou aplicativo – e suas informações podem estar sujeitas as políticas de privacidade deles.
+		Note que esses terceiros podem estar em outros países nos quais a legislação sobre o processamento de informações pessoais seja menos rígida do que a do seu país. Nos casos em que nossa empresa e um parceiro promovem juntos nossos serviços, nós podemos divulgar ao parceiro algumas informações pessoais tais como nome, endereço e nome de usuário das pessoas que se inscreveram nos nossos Serviços com resultado da promoção conjunta com o único propósito de permitir a nós e ao parceiro avaliar os resultados da promoção. Nesse caso, informações pessoais não podem ser usadas pelo parceiro para nenhum outro propósito, o curso CalculuS Ltda. não venderá ou alugará nenhuma das suas informações pessoais para terceiros no curso normal dos negócios e só compartilha suas informações pessoais com terceiros,conforme descrito nesta política. Se você se inscrever no curso CalculuS Ltda. diretamente em um site de terceiros ou por meio de um aplicativo de terceiros, qualquer informação inserida naquele site ou aplicativo (e não diretamente em um site do curso CalculuS Ltda.) será compartilhada com o proprietário desse site ou aplicativo – e suas informações podem estar sujeitas as políticas de privacidade deles.
 	</p>
 	
 	<p class="direitosreservados">Curso CalculuS · Todos Direitos Reservados © 2016</p>
