--- a/termosdeuso.html
+++ b/termosdeuso.html
@@ -67,7 +67,7 @@
 	
 	<h2>Termos de Uso e Serviço</h2>
 	
-	<p>Este Termo de Uso e Serviço aplica-se ao uso de qualquer site criado por Curso CalculuS Ltda..</p>
+	<p>Este Termo de Uso e Serviço aplica-se ao uso de qualquer site criado por Curso CalculuS Ltda.</p>
 	
 	<p>
 		O Usuário (pessoa física ou jurídica), identificado na página de cadastramento deste Serviço deverá aceitar o referido Termo de Uso e Serviço e todas as demais políticas e princípios que o regem.
@@ -80,7 +80,7 @@
 	<h2>I - Do Objeto Através de suas ferramentas e informações capacitadoras</h2>
 
 	<p>
-		O curso CalculuS Ltda. oferece a você a possibilidade de acessar uma variedade de recursos que lhe mostrarão como adquirir, mediante sério trabalho, um faturamento que amplie sua renda financeira. Todas as informações e serviços do curso CalculuS Ltda. servem apenas fins educacionais e informativo. Para alcançar propósitos diferentes, procure o conselho ou os serviços de profissionais terceiros.
+		O curso CalculuS Ltda. oferece a você a possibilidade de acessar uma variedade de recursos que lhe mostrarão como adquirir, mediante sério plano de estudos, uma melhora em seu desempenho universitário. Todas as informações e serviços do curso CalculuS Ltda. servem apenas fins educacionais e informativo. Para alcançar propósitos diferentes, procure o conselho ou os serviços de profissionais terceiros.
 	</p>
 		
 	<h2>II - Do Acordo de Licença</h2>
@@ -118,7 +118,7 @@
 	</p>
 	
 	<p>
-		Ao adquirir algum dos programas produzidos por "curso CalculuS Ltda.", você estará recebendo acesso ao site de membros privado por exatos 180 (cento e oitenta) dias corridos. A data inicial será a data de liberação do seu acesso ao curso.
+		Ao adquirir algum dos programas produzidos por "curso CalculuS Ltda.", você estará recebendo acesso ao site de membros privado por tempo indeterminado enquanto durar esta oferta. A data inicial será a data de liberação do seu acesso ao curso.
 	</p>
 	
 	<p>
@@ -146,7 +146,7 @@
 	<h2>VI - Das Responsabilidades Limitadas</h2>
 	
 	<p>
-		O curso CalculuS Ltda., seus afiliados, empregados, diretores e agentes não são responsáveis por qualquer perda ou dano de qualquer tipo que sejam resultados de qualquer erro ou omissão proveniente dos serviços online, materiais e conteúdos, da indisponibilidade ou interrupção dos serviços online, do uso indevido dos matérias e conteúdo apresentados e do uso de qualquer equipamento em conexão aos serviços online.
+		O curso CalculuS Ltda., seus afiliados, empregados, diretores e agentes não são responsáveis por qualquer perda ou dano de qualquer tipo que sejam resultados de qualquer erro ou omissão proveniente dos serviços online, materiais e conteúdos, da indisponibilidade ou interrupção dos serviços online, do uso indevido dos materiais e conteúdo apresentados e do uso de qualquer equipamento em conexão aos serviços online.
 	</p>
 	
 	<h2>VII - Dos Afiliados</h2>
@@ -183,7 +183,7 @@
 	<h2>X - Dos Resultados de Outros e os Seus Resultados</h2>
 	
 	<p>
-		Você afirma, com a aceitação deste Termo, estar ciente de que todo e qualquer resultado demonstrado em qualquer dos sites, artigos, vídeos, PDFs, documentos e qualquer outro material pertencente ao curso CalculuSsão apenas casos demonstrativos não-típicos dos resultados que alguns estudantes universitários tiveram. Com a demonstração destes, não se promete e nem se espera que você tenha os mesmos resultados. O autor dos livros, materiais, vídeos, documentos e todo outro material publicado pelo projeto se exime completamente de qualquer responsabilidade sobre o uso, interpretação e consequências do uso direto ou indireto de qualquer informação contida neste material. Para estes fins, toda e qualquer promessa, depoimento ou demonstração de resultados contidos nestes materiais deverão ser considerados somente como materiais educacionais e informativos. Nenhum deles poderá ser requisitado como prova ou demonstração de conhecimento perante a lei e outros meios.
+		Você afirma, com a aceitação deste Termo, estar ciente de que todo e qualquer resultado demonstrado em qualquer dos sites, artigos, vídeos, PDFs, documentos e qualquer outro material pertencente ao curso CalculuS são apenas casos demonstrativos não-típicos dos resultados que alguns estudantes universitários tiveram. Com a demonstração destes, não se promete e nem se espera que você tenha os mesmos resultados. O autor dos livros, materiais, vídeos, documentos e todo outro material publicado pelo projeto se exime completamente de qualquer responsabilidade sobre o uso, interpretação e consequências do uso direto ou indireto de qualquer informação contida neste material. Para estes fins, toda e qualquer promessa, depoimento ou demonstração de resultados contidos nestes materiais deverão ser considerados somente como materiais educacionais e informativos. Nenhum deles poderá ser requisitado como prova ou demonstração de conhecimento perante a lei e outros meios.
 	</p>
 	
 	<h2>XI - Dos Hiper-Links e dos Cookies</h2>
@@ -213,7 +213,7 @@
 	<h2>XIII - Do Cancelamento ao Acesso ao Site</h2>
 	
 	<p>
-		Se você utilizar os conteúdo de qualquer forma inconsistente com os Termos de Uso e Serviço, o curso CalculuS Ltda. poderá terminar o seu acesso, bloquear futuros acessos e/ou procurar providencias legais para retratos ao seu mal uso, assim que indicado verdadeiro.
+		Se você utilizar os conteúdos de qualquer forma inconsistente com os Termos de Uso e Serviço, o curso CalculuS Ltda. poderá terminar o seu acesso, bloquear futuros acessos e/ou procurar providencias legais para retratos ao seu mal uso, assim que indicado verdadeiro.
 	</p>
 	
 	<p>
@@ -223,12 +223,12 @@
 	<h2>XIV - Da Participação do Site e Conteúdos Publicados</h2>
 	
 	<p>
-		Você afirma, com a aceitação deste Termo, que está ciente que todo o material disponibilizado no site oficial do curso CalculuS e seus parceiros tem finalidade única de informar. Em nenhuma instância você deverá usar o que você aprendeu, recebeu ou viu em qualquer um de nossos sites, emails, vídeos, artigos e todas outras formas de publicação, como um guia definitivo do que deve ser feito em relação ao seu cachorro, seu pet e/ou outros animais domésticos.
+		Você afirma, com a aceitação deste Termo, que está ciente que todo o material disponibilizado no site oficial do curso CalculuS e seus parceiros tem finalidade única de informar. Em nenhuma instância você deverá usar o que você aprendeu, recebeu ou viu em qualquer um de nossos sites, emails, vídeos, artigos e todas outras formas de publicação, como um guia definitivo do que deve ser feito em relação ao seus estudos sobre Cálculo.
 	</p>
 	
 	<p>
 		Novamente, com intuito de firmar um bom compromisso com todos usuários e garantir a transparência de todos envolvidos no projeto, você concorda que ao aceitar este termo, você estudará o material 
-		só e somente como fonte de educação e informação. Toda e qualquer decisão sobre seus estudos e materiais didáticos deverá ser feita por um professor universitário credenciado. Só e somente ele que poderão dar toda assistência e recomendar o conteúdo, materiais para que vocêmelhore seu desempenho e entendimento na disciplina de Cálculo.
+		só e somente como fonte de educação e informação. Toda e qualquer decisão sobre seus estudos e materiais didáticos deverá ser feita por um professor universitário credenciado. Só e somente ele que poderão dar toda assistência e recomendar o conteúdo, materiais para que você melhore seu desempenho e entendimento na disciplina de Cálculo.
 	</p>
 	
 	<p>
@@ -248,7 +248,7 @@
 	<h2>XVI - Do Foro</h2>
 	
 	<p>
-		Fica eleito o foro da Comarca da Capital Estado de Goiás, no Brasil para dirimir qualquer litígio oriundo deste instrumento.
+		Fica eleito o foro da Comarca da Capital do Estado de Goiás, no Brasil para dirimir qualquer litígio oriundo deste instrumento.
 	</p>
 	
 	<h2>XVII - Da Aceitação do Termo</h2>
