--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 			</p>
 
 			<p class="precofinal">
-				<span class="teste">&#9733;</span> R$ 97,00 <span class="teste">&#9733;</span> 
+				<span class="estrela">&#9733;</span> R$ 97,00 <span class="estrela">&#9733;</span> 
 			</p>
 		</article>
 		
