Ajustes no emails de contato

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 				</p>
 
 				<p class="descricaogarantia">
-					Basta você mandar um e-mail para <span class="email">faleconosco.calculus@gmail.com</span> pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
+					Basta você mandar um e-mail para <span class="email">contato@aprendacalculo.com.br</span> pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
 				</p>
 			</article>
 
