--- a/politica.html
+++ b/politica.html
@@ -17,7 +17,7 @@
 	<h2>Importante: Política de Descadastramento (“Opt-out”)</h2>
 	
 	<p>
-		O usuário dos nossos serviços pode a qualquer momento deixar de receber comunicações do nosso site. Para tanto basta enviar um email para faleconosco.calculus@gmail.com indicando o seu desejo de não mais receber comunicações, ou simplesmente clicar no link ‘remover’ ou ‘desuscribirse contido no final de cada email. Como coletamos informações a seu respeito quando você visita o site do curso CalculuS Ltda. ou usa os Serviços do curso CalculuS Ltda., coletamos o seu endereço IP e as informações 
+		O usuário dos nossos serviços pode a qualquer momento deixar de receber comunicações do nosso site. Para tanto basta enviar um email para contato@aprendacalculo.com.br indicando o seu desejo de não mais receber comunicações, ou simplesmente clicar no link ‘remover’ ou ‘desuscribirse contido no final de cada email. Como coletamos informações a seu respeito quando você visita o site do curso CalculuS Ltda. ou usa os Serviços do curso CalculuS Ltda., coletamos o seu endereço IP e as informações 
 		padrão de acesso à web como o tipo do seu navegador e as páginas que acessou em nosso site. Se você se inscrever, coletaremos os seguintes tipos de informações:
 	</p>
 	
