--- a/temp.html
+++ b/temp.html
@@ -204,7 +204,7 @@
 				</p>
 
 				<p>
-					Basta você mandar um e-mail para faleconosco.calculus@gmail.com pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
+					Basta você mandar um e-mail para contato@aprendacalculo.com.br pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
 				</p>
 			</article>
 
