Inclusão de código Adwords para monitoramento de conversões de emails

--- a/index.html
+++ b/index.html
@@ -383,5 +383,27 @@
 		ga('create', 'UA-56084284-1', 'auto');
 		ga('send', 'pageview');
 	</script>
+	
+	<!-- Google Code for ConversaoGerouLead Conversion Page -->
+	<script type="text/javascript">
+		/* <![CDATA[ */
+		var google_conversion_id = 1003565480;
+		var google_conversion_language = "en";
+		var google_conversion_format = "3";
+		var google_conversion_color = "ffffff";
+		var google_conversion_label = "WwLCCPqzz2kQqOPE3gM";
+		var google_remarketing_only = false;
+		/* ]]> */
+	</script>
+	<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+	</script>
+	<noscript>
+	<div style="display:inline;">
+	<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/1003565480/?label=WwLCCPqzz2kQqOPE3gM&amp;guid=ON&amp;script=0"/>
+	</div>
+	</noscript>
+
+
+	
 </body>
 </html>
