--- a/index.html
+++ b/index.html
@@ -402,8 +402,25 @@
 	<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/1003565480/?label=WwLCCPqzz2kQqOPE3gM&amp;guid=ON&amp;script=0"/>
 	</div>
 	</noscript>
-
-
 	
+	<!-- Código do Google para tag de remarketing -->
+	<!--------------------------------------------------
+	As tags de remarketing não podem ser associadas a informações pessoais de identificação nem inseridas em páginas relacionadas a categorias de confidencialidade. Veja mais informações e instruções sobre como configurar a tag em: http://google.com/ads/remarketingsetup
+	--------------------------------------------------->
+	<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 1003565480;
+	var google_custom_params = window.google_tag_params;
+	var google_remarketing_only = true;
+	/* ]]> */
+	</script>
+	<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+	</script>
+	<noscript>
+	<div style="display:inline;">
+	<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1003565480/?value=0&amp;guid=ON&amp;script=0"/>
+	</div>
+	</noscript>
+
 </body>
 </html>
